--- a/src/Components/EvalContent/EvalContent.css
+++ b/src/Components/EvalContent/EvalContent.css
@@ -4,11 +4,13 @@
   text-align: left;
   margin-left:auto;
   margin-right: auto;
-  margin-top: 5rem;
+  margin-top: 2rem;
 }
 .eval-content-container em{
+  display: inline-block;
   font-size: 1.2rem;
   margin: 0 auto;
+  margin-bottom: 1rem;
   color: #2b4c66 ;
   letter-spacing: .1rem;
   font-style: normal;
@@ -38,6 +40,9 @@
   padding: .6rem;
   border: solid 1px #91bcd3;
 }
+.yes-no-btn .yes:focus,.yes-no-btn .no:focus{
+  outline: 0;
+}
 .yes{
   border-top-left-radius: .8rem;
   border-bottom-left-radius: .8rem;
@@ -47,17 +52,16 @@
   border-bottom-right-radius: .8rem;
 }
 .inactive{
-  
   color: #71889a;
 }
 .active{
-  
   background-color: #3c8cb5;
   color: rgba(0,0,0,.6);
 }
 
 .eval-content-container select{
   margin-top: 1rem;
+  margin-bottom: 1rem;
   width: 100%;
   border: 1px solid #91bcd3;
   border-radius: .5rem;
@@ -65,5 +69,53 @@
   font-size: 1rem;
 }
 
+.eval-content-container input{
+  margin: 0 auto;
+  display: block;
+  padding: 1rem;
+  width: 100% ;
+  border: solid 2px #234661;
+  border-radius: 1rem;
+  font-size: 1rem;
+}
+input:focus{
+  outline: none;
+}
+
+.eval-content-container input:not(:last-child){
+  margin-bottom: 1rem;
+}
+.login-input-box-container input::placeholder{
+  color: #a69fae;
+}
+
+.eval-content-container .eval-next-btn{
+  width: 40%;
+  padding: .7rem;
+}
+.eval-content-container .radio-btns{
+  margin: 1rem;
+  display: inline;
+  width: auto;
+}
+.symptom-input{
+  color: #2b4c66;
+}
+.rating{
+  margin-left: 3rem;
+}
+.rating em{
+  font-size: 1rem;
+}
+
+#rating{
+  margin: 0;
+  display: block;
+  width: 50%;
+}
+.rating .eval-others-input{
+  width: 80%;
+  margin: 0;
+}
 
 
