--- a/src/Components/InputBox/InputBox.css
+++ b/src/Components/InputBox/InputBox.css
@@ -1,5 +1,5 @@
 .login-input-box-container{
-  width: 80%;
+  width: 100%;
   margin: 1.5rem auto;
   text-align: center;
 }
@@ -10,6 +10,7 @@
   width: 80% ;
   border: solid 2px #234661;
   border-radius: 1rem;
+  font-size: 1rem;
 }
 .login-input-box-container input:nth-child(2){
   margin-top: 1rem;
