--- a/src/pages/Evaluation/Evaluation.css
+++ b/src/pages/Evaluation/Evaluation.css
@@ -1,14 +1,23 @@
 .evaluation-container{
   background-color: #f0f2f6;
   min-height: 100vh;
-  padding-top: 2rem;
-  
+  padding-top: 5rem;
 }
 .evaluation-container .footer-svg{
   /* margin-top: 5rem; */
   position: absolute;
-  bottom: 0;
+  bottom: -4rem;
+  left: 0;
+  right: 0;
   width: 100%;
+  
+}
+.evaluation-container .footer-svg svg{
+  display: block;
+}
+.scrollable{
+  height: 45vh;
+  overflow-y: scroll;
 }
 
 @media (orientation: landscape){
