--- a/src/pages/Evaluation/Evaluation.css
+++ b/src/pages/Evaluation/Evaluation.css
@@ -5,19 +5,17 @@
 }
 .evaluation-container .footer-svg{
   /* margin-top: 5rem; */
-  position: absolute;
-  bottom: -4rem;
-  left: 0;
-  right: 0;
+  transform: translateY(4rem);
   width: 100%;
-  
-}
-.evaluation-container .footer-svg svg{
   display: block;
 }
 .scrollable{
   height: 45vh;
   overflow-y: scroll;
+}
+input[type="text"]::placeholder{
+  letter-spacing: .1rem;
+  font-family: 'SF Pro Text',Verdana, Geneva, Tahoma, sans-serif;
 }
 
 @media (orientation: landscape){
