--- a/src/pages/signup/sign-up.css
+++ b/src/pages/signup/sign-up.css
@@ -96,6 +96,7 @@ form input::placeholder{
     text-decoration: none;
     font-size: 1rem;
     margin: 0 auto;
+    margin-bottom: 2rem;
     display: block;
     padding: 1rem;
     width: 80% ;
