Done with User Home Page

--- a/src/pages/signup/sign-up.css
+++ b/src/pages/signup/sign-up.css
@@ -21,7 +21,7 @@
 }
 
 .signup h2{
-    color: #234661;
+    color: #224a68;
     font-size: 2rem;
     letter-spacing: .2rem;
     font-weight: 500;
