--- a/src/Components/PatientProfile/PatientProfile.css
+++ b/src/Components/PatientProfile/PatientProfile.css
@@ -37,6 +37,7 @@
   padding: 1rem;
   display: flex;
   justify-content: space-between;
+  box-shadow: 0 .3rem .5rem rgba(0,0,0,.2);
 }
 .patient-profile-container .quarantine .objective,.patient-profile-container .quarantine .countdown{
   padding: .5rem;
