--- a/src/Components/PatientHome/PatientHome.css
+++ b/src/Components/PatientHome/PatientHome.css
@@ -51,7 +51,7 @@
 .patient-home-body-temp .temp,.patient-home-body-pressure .pressure{
   display: block;
   margin: .8rem 0 .3rem .3rem;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: 600;
 }
 .patient-home-body-pressure{
@@ -92,5 +92,11 @@
 }
 .patient-home-indication-box .text span{
   display: block;
+}
+
+@media screen and (max-width:335px){
+  .patient-home-body-temp .temp,.patient-home-body-pressure .pressure{
+    font-size: 1rem;
+  }
 }
 
