--- a/src/Components/EvalContent/EvalContent.css
+++ b/src/Components/EvalContent/EvalContent.css
@@ -22,10 +22,17 @@
   color: rgba(0,0,0,.6);
   background-color: #3c8cb5;
   width: 50%;
+  max-width:300px;
   text-align: center;
   padding: .7rem .5rem;
   border-radius: .5rem;
+  transition: 0.3s;
 }
+
+.eval-content-container a:hover{
+  background-color: #296380;
+}
+
 .yes-no-btn{
   margin: 0 auto;
   margin-top: 1rem;
@@ -60,9 +67,10 @@
 }
 
 .eval-content-container select{
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  display: block;
+  margin: 1rem auto;
   width: 100%;
+  max-width: 600px;
   border: 1px solid #91bcd3;
   border-radius: .5rem;
   padding: .5rem;
@@ -74,6 +82,7 @@
   display: block;
   padding: 1rem;
   width: 100% ;
+  max-width:600px;
   border: solid 2px #234661;
   border-radius: 1rem;
   font-size: 1rem;
@@ -96,7 +105,6 @@ input:focus{
 .eval-content-container .radio-btns{
   margin: 1rem;
   display: inline;
-  width: auto;
 }
 .symptom-input{
   color: #2b4c66;
