--- a/src/pages/PatientDetails/PatientDetails.css
+++ b/src/pages/PatientDetails/PatientDetails.css
@@ -54,7 +54,7 @@
 }
 
 .Pprog {
-    border-bottom: 3px solid;
+    border-bottom: 7px solid;
 }
 
 .Pswitch h4 {
@@ -90,4 +90,29 @@
 .head-container h4{
     color: #28abfa;
     font-weight: lighter;
+}
+
+.information-div{
+    display: none;
+    padding: 2rem 1rem;
+    margin: 0.5rem auto;
+    width: 100%;
+    box-shadow: 1px -1px 9px #00000077;
+}
+
+.patient-info{
+    margin: 0.5rem 0;
+    padding: 0.5rem 0;
+}
+
+.add-prescription-link{
+    width: fit-content;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    text-decoration: none;
+}
+
+.add-prescription-link img{
+    width: 60px;
 }
