updated Doctor-Home page

--- a/src/Components/DoctorHomeReports/DoctorHomeReports.css
+++ b/src/Components/DoctorHomeReports/DoctorHomeReports.css
@@ -2,9 +2,10 @@
     height: 100px;
     width: 60%;
     margin: auto;
+    padding: 1rem 0;
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-items: flex-start;
     border-bottom: 1px solid #c3c3c3;
 }
 
@@ -12,24 +13,32 @@
     height: 50px;
 }
 
+.arr-link {
+    align-self: center;
+}
+
 .arr {
-    height: 30px !important;
+    height: 15px !important;
 }
 
 .placard-content h2 {
-    font-size: 20px;
+    font-size: 1.2rem;
+    letter-spacing: 0.05em;
     color: #234661;
     margin-bottom: 5px;
 }
 
 .placard-content p {
-    font-size: 16px;
+    font-size: 0.7rem;
+    text-transform: uppercase;
     color: #A0A0A2;
     margin: 5px 0;
 }
 
 .placard span {
     color: #74ACC9;
+    text-transform: none;
+    font-weight: bold;
 }
 
 @media only screen and (max-width: 700px) {
