--- a/src/Components/EvalContent/EvalContent.css
+++ b/src/Components/EvalContent/EvalContent.css
@@ -81,7 +81,7 @@
   margin: 0 auto;
   display: block;
   padding: 1rem;
-  width: 100% ;
+  width: auto ;
   max-width:600px;
   border: solid 2px #234661;
   border-radius: 1rem;
