--- a/src/components/ActivitySchedule/ActivitySchedule.css
+++ b/src/components/ActivitySchedule/ActivitySchedule.css
@@ -34,6 +34,7 @@
 }
 .patient-home-activity-schedule img{
   width: 1.5rem;
+  cursor: pointer;
 }
 @media screen and (max-width:380px){
   .patient-home-activity-schedule{
