changes to eval screen on mobile

--- a/src/pages/Evaluation/Evaluation.css
+++ b/src/pages/Evaluation/Evaluation.css
@@ -33,3 +33,11 @@ input[type="text"]::placeholder{
     width: 100%;
   }
 }
+@media screen and (max-width:468px) {
+  .scrollable{
+    height: 60vh;
+  }
+  .evaluation-container .footer-svg{
+    transform: none;
+  }
+}
