--- a/src/components/patientHistory/patientHistory.css
+++ b/src/components/patientHistory/patientHistory.css
@@ -6,7 +6,7 @@
     height: 65px;
     background-color: lightGray;
     margin: 15px auto;
-    border-left: 5px solid #28abfa;
+    border-left: 5px solid #3c8cb5;
 }
 
 .patient-history h3 {
