--- a/src/pages/signup/sign-up.css
+++ b/src/pages/signup/sign-up.css
@@ -56,8 +56,9 @@
 }
 
 
-form input::placeholder{
+.sign-up-form input::placeholder{
     color: #a69fae;
+    font-family: 'SF Pro Text';
 }
 .signup-container em{
     display: inline-block;
