--- a/src/components/PatientProfile/PatientProfile.css
+++ b/src/components/PatientProfile/PatientProfile.css
@@ -8,6 +8,16 @@
   color: #224a68;
   font-weight: 100;
 }
+.patient-symptom-container select{
+  display: block;
+  margin: 1rem 0;
+  width: 100%;
+  max-width: 600px;
+  border: 1px solid #91bcd3;
+  border-radius: .5rem;
+  padding: .5rem;
+  font-size: 1rem;
+}
 .patient-profile-container .patient-info{
   margin-top: 4rem;
 }
