fixed scroll on eval page

--- a/src/pages/Evaluation/Evaluation.css
+++ b/src/pages/Evaluation/Evaluation.css
@@ -1,4 +1,7 @@
 .evaluation-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background-color: #f0f2f6;
   min-height: 100vh;
   padding-top: 5rem;
@@ -8,10 +11,6 @@
   transform: translateY(4rem);
   width: 100%;
   display: block;
-}
-.scrollable{
-  height: 45vh;
-  overflow-y: scroll;
 }
 input[type="text"]::placeholder{
   letter-spacing: .1rem;
@@ -23,7 +22,7 @@ input[type="text"]::placeholder{
     background-color: #f0f2f6;
     min-height: 100vh;
     padding-top: 2rem;
-    
+
   }
   .evaluation-container .footer-svg{
     margin-top: 5rem;
