--- a/src/components/patientHistory/patientHistory.css
+++ b/src/components/patientHistory/patientHistory.css
@@ -13,6 +13,11 @@
     font-weight: lighter;
 }
 
+.patient-history p.hide{
+    opacity: 0;
+    visibility: hidden;
+}
+
 @media only screen and (min-width: 700px){
     .patient-history{
         width: 70%;
