--- a/src/pages/DoctorLandingPage/DoctorLandingPage.css
+++ b/src/pages/DoctorLandingPage/DoctorLandingPage.css
@@ -5,6 +5,7 @@
     align-content: center;
     background-color: #3C8CB5;
     padding:1.5rem 0;
+    min-height: 100vh;
 }
 
 .doc-landing-page .title{
